fix: UserProfile is wrapped in FlexContainer, extra style is removed

--- a/src/components/ui/user-profile/user-profile.module.scss
+++ b/src/components/ui/user-profile/user-profile.module.scss
@@ -1,13 +1,5 @@
-.container {
-  display: flex;
-  gap: 14px;
-  align-items: center;
-
-  p {
-    border-bottom: 1px dashed var(--color-light-100);
-  }
-}
-
 .link {
-  padding: 6px 0;
+  padding: 0;
+  border-bottom: 1px dashed var(--color-light-100);
+  border-radius: 0;
 }
